# rsnote

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  notes
notes/: examplenote  testnote
src/: commands.rs  helpers.rs  main.rs  types.rs
