[package]
name = "rsnote"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
which = "6"
chrono = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
tabled = "0.20.0"
bincode = { version = "2.0.1", features = ["serde"] }
humantime = "2.2.0"
